数値もエコーするように修正

--- a/.github/workflows/cpp.yaml
+++ b/.github/workflows/cpp.yaml
@@ -37,7 +37,9 @@ jobs:
 
     steps:
       - name: echo name
-        run: echo ${{env.NAME}}
+        run: |
+          echo ${{env.NAME}},
+          echo ${{env.NUMBER}}
 
       # コードのチェックアウト
       - name: Checkout Repository
@@ -47,6 +49,6 @@ jobs:
       - name: Install g++
         run: sudo apt update && sudo apt install -y g++
       - name: Compile C++ file
-        run: g++ -D ADD_NAME=\"${{env.NAME}}\" ADD_NUM=${{env.number}} -o hello src/hello.cpp
+        run: g++ -D ADD_NAME=\"${{env.NAME}}\" -D ADD_NUM=${{env.number}} -o hello src/hello.cpp
       - name: Execute C++ file
         run: ./hello
