--- a/astro_pages/package.json
+++ b/astro_pages/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@octokit/request-error": "^7.0.0",
+    "@octokit/rest": "^22.0.0",
     "astro": "^5.13.2"
   }
 }
