--- a/astro_pages/package.json
+++ b/astro_pages/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@octokit/request-error": "^7.0.0",
     "@octokit/rest": "^22.0.0",
-    "astro": "^5.13.2"
+    "@types/crypto-js": "^4.2.2",
+    "@xterm/xterm": "^5.5.0",
+    "astro": "^5.13.2",
+    "crypto-js": "^4.2.0",
+    "esptool-js": "^0.5.7"
   }
 }
